--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,10 @@
     <div>
         <label >Todo Title</label>
         <label>
-            <input type="text" name="title" placeholder="Enter Todo...">
+            <input type="text" name="title" placeholder="Enter Todo..." >
+            <input type="text" name="category" placeholder="Enter category...">
+            <input type="text" name="notes" placeholder="Enter notes...">
+            (not done, gotta do more)
         </label>
         <br>
         <button type="submit">Add</button>
